Changed deprecated BASE64Decoder to modern lib